[tool.poetry]
name = "evasionmaster"
version = "0.4.1"
description = ""
authors = ["Samat <SamatDav02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame-ce = "^2.4.0"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
